# kiittime

./: .gitignore  .npmrc  .vercelignore  AGENTS.md  CONTEXT.md  INSTALLATION.md  LICENSE  NOTIFICATIONS.md  README.md  app.config.ts  app.json  babel.config.js  eas.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  skills-lock.json  tailwind.config.js  turbo.json
.claude/: settings.json
admin-webapp/: .cta.json  index.html  package.json  pnpm-lock.yaml
android/: settings.gradle
app/: INSTALLATION.md  _layout.tsx  biome.json  gluestack-ui.config.json  index.tsx  not-found.tsx  package.json  privacy-policy.tsx  (+4 more)
backend/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/scratch/: load_timetable_7th.py  manual_ingest_test.py  test_conn.py
backend/src/backend/: email.py  main.py
backend/src/backend/api/: schemas.py
backend/src/backend/api/dao/: announcement_dao.py  section_dao.py  timetable_dao.py
backend/src/backend/api/routers/: admin.py  announcements.py  auth.py  otp.py  roll_numbers.py  sections.py  timetable.py
backend/src/backend/auth/: dependencies.py  tokens.py
backend/src/backend/db/: base.py  models.py  session.py
backend/src/backend/db/migrations/: env.py
backend/src/backend/db/migrations/versions/: 0dabea0c5b70_make_course_name_nullable.py  301dc7c59778_add_bronze_snapshots_table.py  47595667330f_add_announcements_table.py  53af5650caec_add_roll_number_mappings.py  53f4fae4babb_create_initial_schema.py  9df6712fcb2b_drop_otp_verifications_table.py  b0156d8b7801_add_otp_verifications_table.py  db31445784ed_update_roll_number_mapping_unique_.py  f032a37a4315_add_admin_users_table.py
backend/src/backend/pipeline/: bronze.py  clear.py  diff.py  gold.py  orchestrate.py  parser.py  resolve.py  schemas.py  scope.py  validate.py
backend/tests/: conftest.py  test_admin_roll_mappings.py  test_announcements.py  test_otp_router.py  test_parser.py  test_roll_number_mapping.py
backend/tests/pipeline/: conftest.py  test_bronze.py  test_clear.py  test_gold.py  test_orchestrate.py  test_resolve.py  test_scope.py  test_validate.py
(+349 files in other folders)
