[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ashish Pothal", email = "ashishpothal@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"   # match whatever Python version you're actually running

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E/F = pyflakes+pycodestyle core errors, I = isort (import sorting), UP = pyupgrade (modern syntax)
